# redox-but-better

./: .gitignore  Cargo.toml  INSTRUCTIONS.md  Run-Codex.ps1
.cargo/: config.toml
docs/: ROADMAP.md
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  task.rs  vga_buffer.rs
