[package]
name = "infinity_core"
version = "0.1.0"
authors = ["Infinity Core Team"]
edition = "2021"

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
x86_64 = "0.14.2"
pic8259 = "0.10.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
